chore 1.签到界面按钮添加提示
fix
1.绘制多行文本文本省略问题

--- a/src/main/resources/assets/sakura_sign_in/lang/en_us.json
+++ b/src/main/resources/assets/sakura_sign_in/lang/en_us.json
@@ -100,6 +100,7 @@
   "tips.sakura_sign_in.click_to_change_theme": "Click to change theme",
   "tips.sakura_sign_in.click_to_change_theme_or_select_external_theme": "Left-click to change theme\nRight-click to select external theme",
   "tips.sakura_sign_in.drag_inventory_button": "Hold down the Ctrl or Alt key to drag the button\nCtrl: Absolute position coordinates\nAlt: Screen percentage position",
+  "tips.sakura_sign_in.how_to_sign_in": "Left-click to Sign-In\nRight-click to Re-Sign-In or claim the reward",
   "tips.sakura_sign_in.reward_rule_description_1": "签到基础奖励：每次签到都会获得。",
   "tips.sakura_sign_in.reward_rule_description_2": "连续签到奖励：连续签到一定天数后，会获得相应的奖励，\n              签到天数不足下个奖励标准但是满足上个标准时将会获得上个标准的奖励。\n              按照默认配置：连续签到到第1、2、3天，会获得5点经验值；\n              连续签到到第4、5、6、7天，会获得1块蛋糕；\n              连续签到8天及以后会获得1个补签卡。",
   "tips.sakura_sign_in.reward_rule_description_3": "签到周期奖励：连续签到一定天数后，会获得相应的奖励，\n              连续签到天数大于最大天数时重新从第一个奖励开始计算。\n              按照默认配置：连续签到到第2、3、4、7、8、9天，会获得3点经验值；\n              连续签到到第5、10天，会获得1级经验等级。",
@@ -129,17 +130,17 @@
   "message.sakura_sign_in.server_enabled_sign_in_card": "The server has enabled Sign-In Card",
   "message.sakura_sign_in.server_disabled_sign_in_card": "The server has disabled Sign-In Card",
   "message.sakura_sign_in.max_sign_in_day_d": "The maximum number of days for supplementary signing on the server is %d days",
-  "message.sakura_sign_in.server_enabled_sign_in_card_only_basic_reward": "The server has enabled: Retroactive-signing only grants basic rewards",
-  "message.sakura_sign_in.server_disabled_sign_in_card_only_basic_reward": "The server has disabled: Retroactive-signing only grants basic rewards",
+  "message.sakura_sign_in.server_enabled_sign_in_card_only_basic_reward": "The server has enabled: Retroactive-Sign-In only grants basic rewards",
+  "message.sakura_sign_in.server_disabled_sign_in_card_only_basic_reward": "The server has disabled: Retroactive-Sign-In only grants basic rewards",
   "message.sakura_sign_in.server_current_time_s": "Current server time: %s",
   "message.sakura_sign_in.set_server_time_s": "The server time has been set to: %s",
   "message.sakura_sign_in.next_sign_in_time_f": "Can only sign-in after today's %05.2f",
   "message.sakura_sign_in.sign_in_date_late_server_current_date_fail": "The sign-in date is later than the current date on the server, sign-in failed",
   "message.sakura_sign_in.sign_in_date_early_server_current_date_fail": "The sign-in date is earlier than the current date on the server, sign-in failed",
-  "message.sakura_sign_in.compensate_date_not_early_server_current_date_fail": "The retroactive-signing date cannot be earlier than the current server date, retroactive-signing failed",
+  "message.sakura_sign_in.compensate_date_not_early_server_current_date_fail": "The Retroactive-Sign-In date cannot be earlier than the current server date, Retroactive-Sign-In failed",
   "message.sakura_sign_in.sign_in_cool_down_fail": "Sign-in cooling down, sign-in failed, please try again later",
-  "message.sakura_sign_in.server_not_enable_sign_in_card_fail": "The server has disabled Sign-In Card, retroactive-signing failed",
-  "message.sakura_sign_in.not_enough_sign_in_card_fail": "Insufficient Sign-In Card, retroactive-signing failed",
+  "message.sakura_sign_in.server_not_enable_sign_in_card_fail": "The server has disabled Sign-In Card, Retroactive-Sign-In failed",
+  "message.sakura_sign_in.not_enough_sign_in_card_fail": "Insufficient Sign-In Card, Retroactive-Sign-In failed",
   "message.sakura_sign_in.already_receive_reward_s": "The reward for %s has already been claimed",
   "message.sakura_sign_in.not_sign_in": "There are no sign-in records found for [%s].",
   "message.sakura_sign_in.receive_reward_success": "Reward received successfully",
