chore 1.优化指令并追加修改服务器配置指令

--- a/src/main/resources/assets/sakura_sign_in/lang/en_us.json
+++ b/src/main/resources/assets/sakura_sign_in/lang/en_us.json
@@ -133,7 +133,13 @@
   "message.sakura_sign_in.server_enabled_sign_in_card_only_basic_reward": "The server has enabled: Retroactive-Sign-In only grants basic rewards",
   "message.sakura_sign_in.server_disabled_sign_in_card_only_basic_reward": "The server has disabled: Retroactive-Sign-In only grants basic rewards",
   "message.sakura_sign_in.server_current_time_s": "Current server time: %s",
+  "message.sakura_sign_in.player_data_sync_packet_size_d": "The maximum size of the player data synchronization network packet is: %d",
   "message.sakura_sign_in.set_server_time_s": "The server time has been set to: %s",
+  "message.sakura_sign_in.set_max_sign_in_day_d": "The maximum number of days for supplementary signing on the server has been set to: %d",
+  "message.sakura_sign_in.set_sign_in_time_cool_down_mode_s": "The cooling method for server sign-in time has been set to: %s",
+  "message.sakura_sign_in.set_sign_in_time_cool_down_refresh_time_f": "The server sign-in cooldown refresh time has been set to: %05.2f",
+  "message.sakura_sign_in.set_sign_in_time_cool_down_refresh_interval_f": "The refresh interval for server sign-in cooling has been set to: %05.2f",
+  "message.sakura_sign_in.set_player_data_sync_packet_size_d": "The maximum size of the player data synchronization network packet has been set to: %d",
   "message.sakura_sign_in.next_sign_in_time_f": "Can only sign-in after today's %05.2f",
   "message.sakura_sign_in.sign_in_date_late_server_current_date_fail": "The sign-in date is later than the current date on the server, sign-in failed",
   "message.sakura_sign_in.sign_in_date_early_server_current_date_fail": "The sign-in date is earlier than the current date on the server, sign-in failed",
