--- a/src/main/resources/assets/sakura_sign_in/lang/zh_cn.json
+++ b/src/main/resources/assets/sakura_sign_in/lang/zh_cn.json
@@ -113,7 +113,7 @@
   "message.sakura_sign_in.next_day_cannot_operate": "前面的的日期以后再来探索吧。",
   "message.sakura_sign_in.already_signed": "已经签过到了哦。",
   "message.sakura_sign_in.already_get_reward": "不论怎么点也不会获取俩次奖励吧。",
-  "message.sakura_sign_in.server_not_enable_sign_in_card": "服务器未开启补签功能哦。",
+  "message.sakura_sign_in.server_not_enable_sign_in_card": "服务器补签功能被禁用了哦。",
   "message.sakura_sign_in.not_enough_sign_in_card": "补签卡不足了哦。",
   "message.sakura_sign_in.past_day_cannot_operate": "过去的的日期怎么想也回不去了吧。",
   "message.sakura_sign_in.sakurasignin_server_is_offline": "服务器未启用樱花签！",
@@ -123,23 +123,29 @@
   "message.sakura_sign_in.set_sign_in_card_d": "补签卡被设置为了%d张",
   "message.sakura_sign_in.set_player_s_sign_in_card_d": "玩家[%s]拥有%d张补签卡",
   "message.sakura_sign_in.server_enabled_auto_sign": "服务器已启用自动签到",
-  "message.sakura_sign_in.server_disabled_auto_sign": "服务器未启用自动签到",
+  "message.sakura_sign_in.server_disabled_auto_sign": "服务器已禁用自动签到",
   "message.sakura_sign_in.sign_in_time_cool_down_mode_s": "服务器签到时间冷却方式为: %s",
   "message.sakura_sign_in.sign_in_time_cool_down_refresh_time_f": "服务器签到冷却刷新时间为: %05.2f",
   "message.sakura_sign_in.sign_in_time_cool_down_refresh_interval_f": "服务器签到冷却刷新间隔为: %05.2f",
   "message.sakura_sign_in.server_enabled_sign_in_card": "服务器已启用补签卡",
-  "message.sakura_sign_in.server_disabled_sign_in_card": "服务器未启用补签卡",
+  "message.sakura_sign_in.server_disabled_sign_in_card": "服务器已禁用补签卡",
   "message.sakura_sign_in.max_sign_in_day_d": "服务器最大补签天数为: %d",
   "message.sakura_sign_in.server_enabled_sign_in_card_only_basic_reward": "服务器已启用补签仅获得基础奖励",
-  "message.sakura_sign_in.server_disabled_sign_in_card_only_basic_reward": "服务器未启用补签仅获得基础奖励",
+  "message.sakura_sign_in.server_disabled_sign_in_card_only_basic_reward": "服务器已禁用补签仅获得基础奖励",
   "message.sakura_sign_in.server_current_time_s": "服务器当前时间: %s",
+  "message.sakura_sign_in.player_data_sync_packet_size_d": "玩家签到数据同步网络包大小为: %d",
   "message.sakura_sign_in.set_server_time_s": "服务器时间已设置为: %s",
+  "message.sakura_sign_in.set_max_sign_in_day_d": "服务器最大补签天数已被设置为: %d",
+  "message.sakura_sign_in.set_sign_in_time_cool_down_mode_s": "服务器签到时间冷却方式已被设置为: %s",
+  "message.sakura_sign_in.set_sign_in_time_cool_down_refresh_time_f": "服务器签到冷却刷新时间已被设置为: %05.2f",
+  "message.sakura_sign_in.set_sign_in_time_cool_down_refresh_interval_f": "服务器签到冷却刷新间隔已被设置为: %05.2f",
+  "message.sakura_sign_in.set_player_data_sync_packet_size_d": "玩家签到数据同步网络包大小已被设置为: %d",
   "message.sakura_sign_in.next_sign_in_time_f": "要到今天的%05.2f后才能签到哦",
   "message.sakura_sign_in.sign_in_date_late_server_current_date_fail": "签到日期晚于服务器当前日期，签到失败",
   "message.sakura_sign_in.sign_in_date_early_server_current_date_fail": "签到日期早于服务器当前日期，签到失败",
   "message.sakura_sign_in.compensate_date_not_early_server_current_date_fail": "补签日期需早于服务器当前日期，补签失败",
   "message.sakura_sign_in.sign_in_cool_down_fail": "签到冷却中，签到失败，请稍后再试",
-  "message.sakura_sign_in.server_not_enable_sign_in_card_fail": "服务器未开启补签功能，补签失败",
+  "message.sakura_sign_in.server_not_enable_sign_in_card_fail": "服务器补签功能被禁用了哦，补签失败",
   "message.sakura_sign_in.not_enough_sign_in_card_fail": "补签卡不足，补签失败",
   "message.sakura_sign_in.already_receive_reward_s": "%s的奖励已经领取过啦",
   "message.sakura_sign_in.not_sign_in": "没有查询到[%s]的签到记录哦，鉴定为阁下没有签到！",
