--- a/src/main/resources/assets/sakura_sign_in/lang/en_us.json
+++ b/src/main/resources/assets/sakura_sign_in/lang/en_us.json
@@ -52,6 +52,7 @@
   "option.sakura_sign_in.cancel": "Cancel",
   "option.sakura_sign_in.submit": "Submit",
   "option.sakura_sign_in.confirm": "Confirm",
+  "option.sakura_sign_in.no_remind": "Don't show again",
   "tips.sakura_sign_in.enter_something": "Please enter",
   "tips.sakura_sign_in.enter_reward_rule_key": "Please enter the rule key",
   "tips.sakura_sign_in.enter_item_json": "Please enter the Item's Json",
@@ -101,6 +102,8 @@
   "tips.sakura_sign_in.click_to_change_theme_or_select_external_theme": "Left-click to change theme\nRight-click to select external theme",
   "tips.sakura_sign_in.drag_inventory_button": "Hold down the Ctrl or Alt key to drag the button\nCtrl: Absolute position coordinates\nAlt: Screen percentage position",
   "tips.sakura_sign_in.how_to_sign_in": "Left-click to Sign-In\nRight-click to Re-Sign-In or claim the reward",
+  "tips.sakura_sign_in.sign_in_info": "Sign-In Card: %s\nContinuous: %sd\nAccumulated: %sd",
+  "tips.sakura_sign_in.sign_in_screen_tips": "Instructions:\n1.Left-click to sign-in (today only)\n2.Right-click to re-sign-in or claim\n the reward\n3.The theme selector can be left-click\n or right-click\n4.The keys '↑', '→', '↓' and '←' can be\n used to flip through the calendar\n5.Holding down the 'Shift' key and\n moving the mouse over different buttons\n will result in different prompts",
   "tips.sakura_sign_in.reward_rule_description_1": "签到基础奖励：每次签到都会获得。",
   "tips.sakura_sign_in.reward_rule_description_2": "连续签到奖励：连续签到一定天数后，会获得相应的奖励，\n              签到天数不足下个奖励标准但是满足上个标准时将会获得上个标准的奖励。\n              按照默认配置：连续签到到第1、2、3天，会获得5点经验值；\n              连续签到到第4、5、6、7天，会获得1块蛋糕；\n              连续签到8天及以后会获得1个补签卡。",
   "tips.sakura_sign_in.reward_rule_description_3": "签到周期奖励：连续签到一定天数后，会获得相应的奖励，\n              连续签到天数大于最大天数时重新从第一个奖励开始计算。\n              按照默认配置：连续签到到第2、3、4、7、8、9天，会获得3点经验值；\n              连续签到到第5、10天，会获得1级经验等级。",
