--- a/src/main/resources/assets/sakura_sign_in/lang/en_us.json
+++ b/src/main/resources/assets/sakura_sign_in/lang/en_us.json
@@ -47,6 +47,8 @@
   "button.sakura_sign_in.reward_cumulative": "Cumulative Rewards",
   "option.sakura_sign_in.edit": "Edit",
   "option.sakura_sign_in.copy": "Copy",
+  "option.sakura_sign_in.cut": "Cut",
+  "option.sakura_sign_in.paste": "Paste",
   "option.sakura_sign_in.delete": "Delete",
   "option.sakura_sign_in.clear": "Clear",
   "option.sakura_sign_in.cancel": "Cancel",
@@ -92,8 +94,8 @@
   "tips.sakura_sign_in.edit_nbt": "Edit NBT",
   "tips.sakura_sign_in.help_button": "Hold down the Shift key on some elements\non the page to view help information",
   "tips.sakura_sign_in.help_button_shift": "For example, for the red font button,\npressing and holding Shift will provide help information:\nHold down the Ctrl key and right-click with the mouse to confirm.\nClicking directly cancels the operation",
-  "tips.sakura_sign_in.download_reward_config": "Synchronize the configuration file from the server",
-  "tips.sakura_sign_in.upload_reward_config": "Synchronize the configuration file to the server",
+  "tips.sakura_sign_in.download_reward_config": "Sync the config file from the server",
+  "tips.sakura_sign_in.upload_reward_config": "Sync the config file to the server",
   "tips.sakura_sign_in.upload_reward_config_no_permission": "Synchronize the configuration file to the server\nInsufficient permissions",
   "tips.sakura_sign_in.open_config_folder": "Open the configuration folder",
   "tips.sakura_sign_in.reward_rule_sort": "Sort reward rules",
@@ -104,6 +106,7 @@
   "tips.sakura_sign_in.how_to_sign_in": "Left-click to Sign-In\nRight-click to Re-Sign-In or claim the reward",
   "tips.sakura_sign_in.sign_in_info": "Sign-In Card: %s\nContinuous: %sd\nAccumulated: %sd",
   "tips.sakura_sign_in.sign_in_screen_tips": "Instructions:\n1.Left-click to sign-in (today only)\n2.Right-click to re-sign-in or claim\n the reward\n3.The theme selector can be left-click\n or right-click\n4.The keys '↑', '→', '↓' and '←' can be\n used to flip through the calendar\n5.Holding down the 'Shift' key and\n moving the mouse over different buttons\n will result in different prompts",
+  "tips.sakura_sign_in.reward_option_screen_tips": "Tips:\n1.When playing on the server, after modifying\n  the config, must click the 'Sync the config\n  file to the server' button in the right sidebar\n2.The local config file will be overwritten by\n  the server's config file when entering the\n  server\n3.When deleting or clearing the reward config,\n  you need to hold down the 'Ctrl' key\n  and right-click with the mouse to confirm\n  (it's quite a hassle, isn't it?)\n4.For more instructions, please use the '?'\n  button in the upper right corner to view",
   "tips.sakura_sign_in.reward_rule_description_1": "签到基础奖励：每次签到都会获得。",
   "tips.sakura_sign_in.reward_rule_description_2": "连续签到奖励：连续签到一定天数后，会获得相应的奖励，\n              签到天数不足下个奖励标准但是满足上个标准时将会获得上个标准的奖励。\n              按照默认配置：连续签到到第1、2、3天，会获得5点经验值；\n              连续签到到第4、5、6、7天，会获得1块蛋糕；\n              连续签到8天及以后会获得1个补签卡。",
   "tips.sakura_sign_in.reward_rule_description_3": "签到周期奖励：连续签到一定天数后，会获得相应的奖励，\n              连续签到天数大于最大天数时重新从第一个奖励开始计算。\n              按照默认配置：连续签到到第2、3、4、7、8、9天，会获得3点经验值；\n              连续签到到第5、10天，会获得1级经验等级。",
