--- a/src/main/resources/assets/sakura_sign_in/lang/zh_cn.json
+++ b/src/main/resources/assets/sakura_sign_in/lang/zh_cn.json
@@ -45,8 +45,10 @@
   "button.sakura_sign_in.reward_week": "周度签到奖励",
   "button.sakura_sign_in.reward_time": "具体时间奖励",
   "button.sakura_sign_in.reward_cumulative": "累计签到奖励",
-  "option.sakura_sign_in.edit": "修改",
+  "option.sakura_sign_in.edit": "编辑",
   "option.sakura_sign_in.copy": "复制",
+  "option.sakura_sign_in.cut": "剪切",
+  "option.sakura_sign_in.paste": "粘贴",
   "option.sakura_sign_in.delete": "删除",
   "option.sakura_sign_in.clear": "清空",
   "option.sakura_sign_in.cancel": "取消",
@@ -104,6 +106,7 @@
   "tips.sakura_sign_in.how_to_sign_in": "鼠标左键签到\n右键补签/领取奖励",
   "tips.sakura_sign_in.sign_in_info": "补签卡: %s\n连续签到: %sd\n累计签到: %sd",
   "tips.sakura_sign_in.sign_in_screen_tips": "操作说明:\n1.鼠标左键点击进行签到(仅本日)\n2.鼠标右键点击进行补签与奖励领取\n3.鼠标左键与右键点击主题选择器会\n 得到不同的效果\n4.可以使用键盘按键'↑'、'→'、'↓'、'←'\n 进行日历的翻页\n5.按住键盘'Shift'键后将鼠标挪到不同\n 的按钮上会有不同的提示\n6.喵!",
+  "tips.sakura_sign_in.reward_option_screen_tips": "温馨提示:\n1.在服务器游玩时，修改配置后请点击右侧边栏中的\n  『将配置文件同步至服务器』按钮\n2. 在进入服务器时本地配置文件会被服务器的配置\n  文件覆盖\n3.『删除』或『清空』奖励配置时需要按住『Ctrl』\n  键并使用鼠标右键点击以确认(很麻烦对不对?)\n4.更多说明请使用右上角『?』按钮查看",
   "tips.sakura_sign_in.reward_rule_description_1": "签到基础奖励：每次签到都会获得。",
   "tips.sakura_sign_in.reward_rule_description_2": "连续签到奖励：连续签到一定天数后，会获得相应的奖励，\n              签到天数不足下个奖励标准但是满足上个标准时将会获得上个标准的奖励。\n              按照默认配置：连续签到到第1、2、3天，会获得5点经验值；\n              连续签到到第4、5、6、7天，会获得1块蛋糕；\n              连续签到8天及以后会获得1个补签卡。",
   "tips.sakura_sign_in.reward_rule_description_3": "签到周期奖励：连续签到一定天数后，会获得相应的奖励，\n              连续签到天数大于最大天数时重新从第一个奖励开始计算。\n              按照默认配置：连续签到到第2、3、4、7、8、9天，会获得3点经验值；\n              连续签到到第5、10天，会获得1级经验等级。",
