chore 1.优化奖励概率设置 2.添加 连续签到奖励 与 签到周期奖励 的服务器配置 3.优化签到与领取奖励指令
fix
1.奖励合并问题

--- a/src/main/resources/assets/sakura_sign_in/lang/zh_cn.json
+++ b/src/main/resources/assets/sakura_sign_in/lang/zh_cn.json
@@ -69,6 +69,7 @@
   "tips.sakura_sign_in.enter_advancement_json": "请输入进度Json",
   "tips.sakura_sign_in.enter_message": "请输入消息",
   "tips.sakura_sign_in.enter_command": "请输入指令",
+  "tips.sakura_sign_in.enter_reward_probability": "请输入奖励概率",
   "tips.sakura_sign_in.reward_rule_s_error": "规则名称[%s]输入有误",
   "tips.sakura_sign_in.item_json_s_error": "物品Json[%s]输入有误",
   "tips.sakura_sign_in.item_count_s_error": "物品数量[%s]输入有误",
@@ -77,6 +78,7 @@
   "tips.sakura_sign_in.effect_duration_s_error": "持续时间[%s]输入有误",
   "tips.sakura_sign_in.effect_amplifier_s_error": "效果等级[%s]输入有误",
   "tips.sakura_sign_in.advancement_json_s_error": "进度Json[%s]输入有误",
+  "tips.sakura_sign_in.reward_probability_s_error": "奖励概率[%s]输入有误",
   "tips.sakura_sign_in.enter_value_s_error": "输入值[%s]有误",
   "tips.sakura_sign_in.open_sidebar": "展开侧边栏",
   "tips.sakura_sign_in.close_sidebar": "关闭侧边栏",
@@ -91,6 +93,7 @@
   "tips.sakura_sign_in.set_count_s": "设置数量\n当前 %s",
   "tips.sakura_sign_in.set_duration_s": "设置持续时间\n当前 %ss",
   "tips.sakura_sign_in.set_amplifier_s": "设置效果等级\n当前 %s",
+  "tips.sakura_sign_in.set_probability_f": "设置概率\n当前 %.3f%%",
   "tips.sakura_sign_in.edit_nbt": "NBT编辑已禁用\n绝对不是因为不会解析(急忙否定)",
   "tips.sakura_sign_in.help_button": "页面上部分元素\n按住Shift键可查看帮助信息",
   "tips.sakura_sign_in.help_button_shift": "比如红色字体按钮, 按住Shift时会给予帮助信息:\n按住Ctrl键 并且 鼠标右键点击以确认\n直接点击是取消哦",
@@ -142,6 +145,10 @@
   "message.sakura_sign_in.player_data_sync_packet_size_d": "玩家签到数据同步网络包大小为: %d",
   "message.sakura_sign_in.server_enabled_reward_affected_by_luck": "服务器已启用奖励领取受幸运影响",
   "message.sakura_sign_in.server_disabled_reward_affected_by_luck": "服务器已禁用奖励领取受幸运影响",
+  "message.sakura_sign_in.server_enabled_continuous_rewards_repeatable": "服务器已启用连续签到奖励持续领取",
+  "message.sakura_sign_in.server_disabled_continuous_rewards_repeatable": "服务器已禁用连续签到奖励持续领取",
+  "message.sakura_sign_in.server_enabled_cycle_rewards_repeatable": "服务器已启用循环签到奖励持续领取",
+  "message.sakura_sign_in.server_disabled_cycle_rewards_repeatable": "服务器已禁用循环签到奖励持续领取",
   "message.sakura_sign_in.set_server_time_s": "服务器时间已设置为: %s",
   "message.sakura_sign_in.set_max_sign_in_day_d": "服务器最大补签天数已被设置为: %d",
   "message.sakura_sign_in.set_sign_in_time_cool_down_mode_s": "服务器签到时间冷却方式已被设置为: %s",
@@ -158,5 +165,5 @@
   "message.sakura_sign_in.already_receive_reward_s": "%s的奖励已经领取过啦",
   "message.sakura_sign_in.not_sign_in": "没有查询到[%s]的签到记录哦，鉴定为阁下没有签到！",
   "message.sakura_sign_in.receive_reward_success": "奖励领取详情:",
-  "message.sakura_sign_in.sign_in_success_s": "签到成功, %s/%s"
+  "message.sakura_sign_in.sign_in_success_s": "%s 签到成功, 连续签到：%s天，累计签到：%s天"
 }
