--- a/src/main/resources/assets/sakura_sign_in/lang/en_us.json
+++ b/src/main/resources/assets/sakura_sign_in/lang/en_us.json
@@ -9,9 +9,11 @@
   "command.sakura_sign_in.sign": "Like /va sign",
   "command.sakura_sign_in.reward": "Like /va reward",
   "command.sakura_sign_in.signex": "Like /va signex",
+  "command.sakura_sign_in.cdk": "Like /va cdk",
   "command.sakura_sign_in.va_sign": "Sign-in",
   "command.sakura_sign_in.va_reward": "Claim the reward",
   "command.sakura_sign_in.va_signex": "Sign-in and claim the reward",
+  "command.sakura_sign_in.va_cdk": "Receive redemption code rewards",
   "command.sakura_sign_in.va_card_give": "Provide players with Sign-In Card",
   "command.sakura_sign_in.va_card_set": "Set the number of Sign-In Card for player",
   "command.sakura_sign_in.va_card_get": "Get the number of Sign-In Card for player",
@@ -30,6 +32,7 @@
   "title.sakura_sign_in.day_s": "Day %s",
   "title.sakura_sign_in.year_day_s": "%s day of the year",
   "title.sakura_sign_in.month_day_s": "%s day of the month",
+  "title.sakura_sign_in.s_valid_until_s": "%s, Valid until: %s",
   "title.sakura_sign_in.week_1": "Monday",
   "title.sakura_sign_in.week_2": "Tuesday",
   "title.sakura_sign_in.week_3": "Wednesday",
@@ -45,6 +48,8 @@
   "button.sakura_sign_in.reward_week": "Week Rewards",
   "button.sakura_sign_in.reward_time": "Time Rewards",
   "button.sakura_sign_in.reward_cumulative": "Cumulative Rewards",
+  "button.sakura_sign_in.reward_random": "Random Rewards",
+  "button.sakura_sign_in.reward_cdk": "CDKEY Rewards",
   "option.sakura_sign_in.edit": "Edit",
   "option.sakura_sign_in.copy": "Copy",
   "option.sakura_sign_in.cut": "Cut",
@@ -70,6 +75,7 @@
   "tips.sakura_sign_in.enter_message": "Please enter the Message",
   "tips.sakura_sign_in.enter_command": "Please enter the Command",
   "tips.sakura_sign_in.enter_reward_probability": "Please enter the Probability",
+  "tips.sakura_sign_in.enter_valid_until": "Please enter the Validity period",
   "tips.sakura_sign_in.reward_rule_s_error": "The rule name [%s] is incorrect",
   "tips.sakura_sign_in.item_json_s_error": "Item's Json [%s] is incorrect",
   "tips.sakura_sign_in.item_count_s_error": "Item's Quantity [%s] is incorrect",
@@ -79,6 +85,7 @@
   "tips.sakura_sign_in.effect_amplifier_s_error": "Effect's Amplifier [%s] is incorrect",
   "tips.sakura_sign_in.advancement_json_s_error": "Advancement's Json [%s] is incorrect",
   "tips.sakura_sign_in.reward_probability_s_error": "Probability [%s] is incorrect",
+  "tips.sakura_sign_in.valid_until_s_error": "Validity period [%s] is incorrect",
   "tips.sakura_sign_in.enter_value_s_error": "Enter Value [%s] is incorrect",
   "tips.sakura_sign_in.open_sidebar": "Open sidebar",
   "tips.sakura_sign_in.close_sidebar": "Close sidebar",
@@ -111,13 +118,15 @@
   "tips.sakura_sign_in.sign_in_screen_tips": "Instructions:\n1.Left-click to sign-in (today only)\n2.Right-click to re-sign-in or claim\n the reward\n3.The theme selector can be left-click\n or right-click\n4.The keys '↑', '→', '↓' and '←' can be\n used to flip through the calendar\n5.Holding down the 'Shift' key and\n moving the mouse over different buttons\n will result in different prompts",
   "tips.sakura_sign_in.reward_option_screen_tips": "Tips:\n1.When playing on the server, after modifying\n  the config, must click the 'Sync the config\n  file to the server' button in the right sidebar\n2.The local config file will be overwritten by\n  the server's config file when entering the\n  server\n3.When deleting or clearing the reward config,\n  you need to hold down the 'Ctrl' key\n  and right-click with the mouse to confirm\n  (it's quite a hassle, isn't it?)\n4.For more instructions, please use the '?'\n  button in the upper right corner to view",
   "tips.sakura_sign_in.reward_rule_description_1": "签到基础奖励：每次签到都会获得。",
-  "tips.sakura_sign_in.reward_rule_description_2": "连续签到奖励：连续签到一定天数后，会获得相应的奖励，\n              签到天数不足下个奖励标准但是满足上个标准时将会获得上个标准的奖励。\n              按照默认配置：连续签到到第1、2、3天，会获得5点经验值；\n              连续签到到第4、5、6、7天，会获得1块蛋糕；\n              连续签到8天及以后会获得1个补签卡。",
-  "tips.sakura_sign_in.reward_rule_description_3": "签到周期奖励：连续签到一定天数后，会获得相应的奖励，\n              连续签到天数大于最大天数时重新从第一个奖励开始计算。\n              按照默认配置：连续签到到第2、3、4、7、8、9天，会获得3点经验值；\n              连续签到到第5、10天，会获得1级经验等级。",
+  "tips.sakura_sign_in.reward_rule_description_2": "连续签到奖励：连续签到一定天数后，会获得相应的奖励，\n              签到天数不足下个奖励标准但是满足上个标准时将会获得上个标准的奖励。\n              （需要修改服务器配置项continuousRewardsRepeatable）\n              按照默认配置：连续签到到第1、2、3天，会获得5点经验值；\n              连续签到到第4、5、6、7天，会获得1块蛋糕；\n              连续签到8天及以后会获得1个补签卡。",
+  "tips.sakura_sign_in.reward_rule_description_3": "签到周期奖励：连续签到一定天数后，会获得相应的奖励，\n              连续签到天数大于最大天数时重新从第一个奖励开始计算。\n              （需要修改服务器配置项cycleRewardsRepeatable）\n              按照默认配置：连续签到到第2、3、4、7、8、9天，会获得3点经验值；\n              连续签到到第5、10天，会获得1级经验等级。",
   "tips.sakura_sign_in.reward_rule_description_4": "年度签到奖励：该年的第x天，会获得相应的奖励。",
   "tips.sakura_sign_in.reward_rule_description_5": "月度签到奖励：该月的第x天，会获得相应的奖励。",
   "tips.sakura_sign_in.reward_rule_description_6": "周度签到奖励：该周的第x天（周x），会获得相应的奖励。\n              按照默认配置：周六签到会获得100分钟的幸运Ⅰ效果；\n              周日签到会获得100分钟的生命回复Ⅰ效果、100分钟的跳跃提升Ⅰ效果\n              及1个附魔金苹果。",
   "tips.sakura_sign_in.reward_rule_description_7": "具体时间奖励：指定日期/日期范围签到奖励，可以指定日期或日期范围，\n              签到该日期/日期范围，会获得相应的奖励。\n              按照默认配置：\n              在每年的10月06日至10月07日签到，会获得1个经验瓶及5分钟的抗性Ⅱ效果。\n              指定日期/日期范围签到奖励，日期格式支持 \n              yyyy-MM-dd, 0000-MM-dd, yyyy-MM-00, 0000-MM-00,\n              yyyy~n-MM~n-dd, 0000-MM~n-dd~n, yyyy-MM~n-00,\n              0000-MM~n-00, yyyy-MM-ddTHH:mm, yyyy-MM-ddTHH~n:mm~n。\n              指定具体时间时, 日期与时间需要'T'分隔；~n表示区间, \n              例 2024-10-05~5 表示 2024年10月05日到10日的5天；\n              0000(yyyy) 表示不限年份, 00(MM) 表示不限月份, 00(dd) 表示不限日期。",
   "tips.sakura_sign_in.reward_rule_description_8": "累计签到奖励：累计签到达到一定天数时，会获得相应的奖励。",
+  "tips.sakura_sign_in.reward_rule_description_9": "随机奖励池：在每次签到时随机获得一个随机组奖励。",
+  "tips.sakura_sign_in.reward_rule_description_10": "兑换码奖励池：指令输入兑换码进行兑换，每个兑换码仅可使用一次。",
   "message.sakura_sign_in.selected_theme_file_s": "Selected theme file: %s",
   "message.sakura_sign_in.next_day_cannot_operate": "Unable to operate on the date after.",
   "message.sakura_sign_in.already_signed": "Already Signed-In.",
@@ -165,5 +174,9 @@
   "message.sakura_sign_in.already_receive_reward_s": "The reward for %s has already been claimed",
   "message.sakura_sign_in.not_sign_in": "There are no sign-in records found for [%s].",
   "message.sakura_sign_in.receive_reward_success": "Reward received details:",
-  "message.sakura_sign_in.sign_in_success_s": "Successfully Signed-In on %s, continuous: %sd, accumulated: %sd"
+  "message.sakura_sign_in.sign_in_success_s": "Successfully Signed-In on %s, continuous: %sd, accumulated: %sd",
+  "message.sakura_sign_in.cdk_error_too_many_times": "There were too many CDK input errors today. Please try again tomorrow",
+  "message.sakura_sign_in.cdk_already_received": "You have already received the reward for the current CDK, please do not claim it again",
+  "message.sakura_sign_in.cdk_not_exist_or_already_received": "The CDK entered does not exist, has been claimed, or has expired",
+  "message.sakura_sign_in.cdk_expired": "The CDK entered does not exist, has been claimed, or has expired"
 }
