--- a/src/main/resources/assets/sakura_sign_in/lang/zh_cn.json
+++ b/src/main/resources/assets/sakura_sign_in/lang/zh_cn.json
@@ -9,9 +9,11 @@
   "command.sakura_sign_in.sign": "详见/va sign",
   "command.sakura_sign_in.reward": "详见/va reward",
   "command.sakura_sign_in.signex": "详见/va signex",
+  "command.sakura_sign_in.cdk": "详见/va cdk",
   "command.sakura_sign_in.va_sign": "签到或补签指定的日期",
   "command.sakura_sign_in.va_reward": "领取指定日期的奖励",
   "command.sakura_sign_in.va_signex": "签到或补签指定日期并领取奖励",
+  "command.sakura_sign_in.va_cdk": "领取兑换码奖励",
   "command.sakura_sign_in.va_card_give": "给予玩家指定数量的补签卡",
   "command.sakura_sign_in.va_card_set": "设置玩家的补签卡数量",
   "command.sakura_sign_in.va_card_get": "获取玩家的补签卡数量",
@@ -30,6 +32,7 @@
   "title.sakura_sign_in.day_s": "第%s天",
   "title.sakura_sign_in.year_day_s": "年度第%s天",
   "title.sakura_sign_in.month_day_s": "月度第%s天",
+  "title.sakura_sign_in.s_valid_until_s": "%s, 有效期至: %s",
   "title.sakura_sign_in.week_1": "星期一",
   "title.sakura_sign_in.week_2": "星期二",
   "title.sakura_sign_in.week_3": "星期三",
@@ -45,6 +48,8 @@
   "button.sakura_sign_in.reward_week": "周度签到奖励",
   "button.sakura_sign_in.reward_time": "具体时间奖励",
   "button.sakura_sign_in.reward_cumulative": "累计签到奖励",
+  "button.sakura_sign_in.reward_random": "随机奖励池",
+  "button.sakura_sign_in.reward_cdk": "兑换码奖励池",
   "option.sakura_sign_in.edit": "编辑",
   "option.sakura_sign_in.copy": "复制",
   "option.sakura_sign_in.cut": "剪切",
@@ -70,6 +75,7 @@
   "tips.sakura_sign_in.enter_message": "请输入消息",
   "tips.sakura_sign_in.enter_command": "请输入指令",
   "tips.sakura_sign_in.enter_reward_probability": "请输入奖励概率",
+  "tips.sakura_sign_in.enter_valid_until": "请输入有效期",
   "tips.sakura_sign_in.reward_rule_s_error": "规则名称[%s]输入有误",
   "tips.sakura_sign_in.item_json_s_error": "物品Json[%s]输入有误",
   "tips.sakura_sign_in.item_count_s_error": "物品数量[%s]输入有误",
@@ -79,6 +85,7 @@
   "tips.sakura_sign_in.effect_amplifier_s_error": "效果等级[%s]输入有误",
   "tips.sakura_sign_in.advancement_json_s_error": "进度Json[%s]输入有误",
   "tips.sakura_sign_in.reward_probability_s_error": "奖励概率[%s]输入有误",
+  "tips.sakura_sign_in.valid_until_s_error": "有效期[%s]输入有误",
   "tips.sakura_sign_in.enter_value_s_error": "输入值[%s]有误",
   "tips.sakura_sign_in.open_sidebar": "展开侧边栏",
   "tips.sakura_sign_in.close_sidebar": "关闭侧边栏",
@@ -111,13 +118,15 @@
   "tips.sakura_sign_in.sign_in_screen_tips": "操作说明:\n1.鼠标左键点击进行签到(仅本日)\n2.鼠标右键点击进行补签与奖励领取\n3.鼠标左键与右键点击主题选择器会\n 得到不同的效果\n4.可以使用键盘按键'↑'、'→'、'↓'、'←'\n 进行日历的翻页\n5.按住键盘'Shift'键后将鼠标挪到不同\n 的按钮上会有不同的提示\n6.喵!",
   "tips.sakura_sign_in.reward_option_screen_tips": "温馨提示:\n1.在服务器游玩时，修改配置后请点击右侧边栏中的\n  『将配置文件同步至服务器』按钮\n2. 在进入服务器时本地配置文件会被服务器的配置\n  文件覆盖\n3.『删除』或『清空』奖励配置时需要按住『Ctrl』\n  键并使用鼠标右键点击以确认(很麻烦对不对?)\n4.更多说明请使用右上角『?』按钮查看",
   "tips.sakura_sign_in.reward_rule_description_1": "签到基础奖励：每次签到都会获得。",
-  "tips.sakura_sign_in.reward_rule_description_2": "连续签到奖励：连续签到一定天数后，会获得相应的奖励，\n              签到天数不足下个奖励标准但是满足上个标准时将会获得上个标准的奖励。\n              按照默认配置：连续签到到第1、2、3天，会获得5点经验值；\n              连续签到到第4、5、6、7天，会获得1块蛋糕；\n              连续签到8天及以后会获得1个补签卡。",
-  "tips.sakura_sign_in.reward_rule_description_3": "签到周期奖励：连续签到一定天数后，会获得相应的奖励，\n              连续签到天数大于最大天数时重新从第一个奖励开始计算。\n              按照默认配置：连续签到到第2、3、4、7、8、9天，会获得3点经验值；\n              连续签到到第5、10天，会获得1级经验等级。",
+  "tips.sakura_sign_in.reward_rule_description_2": "连续签到奖励：连续签到一定天数后，会获得相应的奖励，\n              签到天数不足下个奖励标准但是满足上个标准时将会获得上个标准的奖励。\n              （需要修改服务器配置项continuousRewardsRepeatable）\n              按照默认配置：连续签到到第1、2、3天，会获得5点经验值；\n              连续签到到第4、5、6、7天，会获得1块蛋糕；\n              连续签到8天及以后会获得1个补签卡。",
+  "tips.sakura_sign_in.reward_rule_description_3": "签到周期奖励：连续签到一定天数后，会获得相应的奖励，\n              连续签到天数大于最大天数时重新从第一个奖励开始计算。\n              （需要修改服务器配置项cycleRewardsRepeatable）\n              按照默认配置：连续签到到第2、3、4、7、8、9天，会获得3点经验值；\n              连续签到到第5、10天，会获得1级经验等级。",
   "tips.sakura_sign_in.reward_rule_description_4": "年度签到奖励：该年的第x天，会获得相应的奖励。",
   "tips.sakura_sign_in.reward_rule_description_5": "月度签到奖励：该月的第x天，会获得相应的奖励。",
   "tips.sakura_sign_in.reward_rule_description_6": "周度签到奖励：该周的第x天（周x），会获得相应的奖励。\n              按照默认配置：周六签到会获得100分钟的幸运Ⅰ效果；\n              周日签到会获得100分钟的生命回复Ⅰ效果、100分钟的跳跃提升Ⅰ效果\n              及1个附魔金苹果。",
   "tips.sakura_sign_in.reward_rule_description_7": "具体时间奖励：指定日期/日期范围签到奖励，可以指定日期或日期范围，\n              签到该日期/日期范围，会获得相应的奖励。\n              按照默认配置：\n              在每年的10月06日至10月07日签到，会获得1个经验瓶及5分钟的抗性Ⅱ效果。\n              指定日期/日期范围签到奖励，日期格式支持 \n              yyyy-MM-dd, 0000-MM-dd, yyyy-MM-00, 0000-MM-00,\n              yyyy~n-MM~n-dd, 0000-MM~n-dd~n, yyyy-MM~n-00,\n              0000-MM~n-00, yyyy-MM-ddTHH:mm, yyyy-MM-ddTHH~n:mm~n。\n              指定具体时间时, 日期与时间需要'T'分隔；~n表示区间, \n              例 2024-10-05~5 表示 2024年10月05日到10日的5天；\n              0000(yyyy) 表示不限年份, 00(MM) 表示不限月份, 00(dd) 表示不限日期。",
   "tips.sakura_sign_in.reward_rule_description_8": "累计签到奖励：累计签到达到一定天数时，会获得相应的奖励。",
+  "tips.sakura_sign_in.reward_rule_description_9": "随机奖励池：在每次签到时随机获得一个随机组奖励。",
+  "tips.sakura_sign_in.reward_rule_description_10": "兑换码奖励池：指令输入兑换码进行兑换，每个兑换码仅可使用一次。",
   "message.sakura_sign_in.selected_theme_file_s": "已选择主题文件: %s",
   "message.sakura_sign_in.next_day_cannot_operate": "前面的的日期以后再来探索吧。",
   "message.sakura_sign_in.already_signed": "已经签过到了哦。",
@@ -165,5 +174,9 @@
   "message.sakura_sign_in.already_receive_reward_s": "%s的奖励已经领取过啦",
   "message.sakura_sign_in.not_sign_in": "没有查询到[%s]的签到记录哦，鉴定为阁下没有签到！",
   "message.sakura_sign_in.receive_reward_success": "奖励领取详情:",
-  "message.sakura_sign_in.sign_in_success_s": "%s 签到成功, 连续签到：%s天，累计签到：%s天"
+  "message.sakura_sign_in.sign_in_success_s": "%s 签到成功, 连续签到：%s天，累计签到：%s天",
+  "message.sakura_sign_in.cdk_error_too_many_times": "今日CDK输入错误次数过多，请明日再试",
+  "message.sakura_sign_in.cdk_already_received": "阁下已领取过当前CDK的奖励，请勿重复领取",
+  "message.sakura_sign_in.cdk_not_exist_or_already_received": "输入的CDK不存在或已被领取或已过期",
+  "message.sakura_sign_in.cdk_expired": "输入的CDK不存在或已被领取或已过期"
 }
