--- a/src/main/resources/assets/sakura_sign_in/lang/en_us.json
+++ b/src/main/resources/assets/sakura_sign_in/lang/en_us.json
@@ -174,5 +174,10 @@
   "message.sakura_sign_in.cdk_error_too_many_times": "Too many incorrect CDK entries today, please try again tomorrow.",
   "message.sakura_sign_in.cdk_already_received": "You have already claimed the reward for this CDK, please do not repeat.",
   "message.sakura_sign_in.cdk_not_exist_or_already_received": "The entered CDK does not exist or has already been claimed or expired.",
-  "message.sakura_sign_in.cdk_expired": "The entered CDK has expired or is invalid."
+  "message.sakura_sign_in.cdk_expired": "The entered CDK has expired or is invalid.",
+  "message.sakura_sign_in.reward_option_download_failed": "Reward option download failed.",
+  "message.sakura_sign_in.reward_option_download_success": "Reward option download successful.",
+  "message.sakura_sign_in.reward_option_upload_failed": "Reward option upload failed.",
+  "message.sakura_sign_in.reward_option_upload_success": "Reward option upload successful.",
+  "message.sakura_sign_in.local_server_not_support_this_operation": "The local server does not support this operation."
 }
