chore 1.兑换码奖励添加数量配置 2.优化添加奖励页面规则的标题 3.修改按键监听方式，使操作支持自定义按键
(cherry picked from commit 8139884d9893867b6e05326c26507322bd75ea1e)

--- a/src/main/resources/assets/sakura_sign_in/lang/en_us.json
+++ b/src/main/resources/assets/sakura_sign_in/lang/en_us.json
@@ -44,7 +44,7 @@
   "title.sakura_sign_in.day_s": "Day %s",
   "title.sakura_sign_in.year_day_s": "Year %s Day",
   "title.sakura_sign_in.month_day_s": "Month %s Day",
-  "title.sakura_sign_in.s_valid_until_s": "%s, Valid Until: %s",
+  "title.sakura_sign_in.s_valid_until_s": "%s, Valid Until: %s, Remaining: %s",
   "title.sakura_sign_in.week_1": "Monday",
   "title.sakura_sign_in.week_2": "Tuesday",
   "title.sakura_sign_in.week_3": "Wednesday",
@@ -64,6 +64,15 @@
   "option.sakura_sign_in.no_remind": "Do Not Remind Again",
   "tips.sakura_sign_in.enter_something": "Please Enter",
   "tips.sakura_sign_in.enter_reward_rule_key": "Please Enter Rule",
+  "tips.sakura_sign_in.enter_reward_rule_key_2": "Please Enter Rule (One day)",
+  "tips.sakura_sign_in.enter_reward_rule_key_3": "Please Enter Rule (One day)",
+  "tips.sakura_sign_in.enter_reward_rule_key_4": "Please Enter Rule (Day of year)",
+  "tips.sakura_sign_in.enter_reward_rule_key_5": "Please Enter Rule (Day of month)",
+  "tips.sakura_sign_in.enter_reward_rule_key_6": "Please Enter Rule (Day of week)",
+  "tips.sakura_sign_in.enter_reward_rule_key_7": "Please Enter Rule (Specific datetime)",
+  "tips.sakura_sign_in.enter_reward_rule_key_8": "Please Enter Rule (Cumulated days)",
+  "tips.sakura_sign_in.enter_reward_rule_key_9": "Please Enter Rule (Probability)",
+  "tips.sakura_sign_in.enter_reward_rule_key_10": "Please Enter Rule (cdk)",
   "tips.sakura_sign_in.enter_item_json": "Please Enter Item JSON",
   "tips.sakura_sign_in.enter_item_count": "Please Enter Item Quantity",
   "tips.sakura_sign_in.enter_item_nbt": "Please Enter Item NBT",
@@ -78,6 +87,7 @@
   "tips.sakura_sign_in.enter_command": "Please Enter Command",
   "tips.sakura_sign_in.enter_reward_probability": "Please Enter Reward Probability",
   "tips.sakura_sign_in.enter_valid_until": "Please Enter Valid Until Date",
+  "tips.sakura_sign_in.enter_num": "Please Enter Quantity",
   "tips.sakura_sign_in.reward_rule_s_error": "Rule Name [%s] Input Error",
   "tips.sakura_sign_in.item_json_s_error": "Item JSON [%s] Input Error",
   "tips.sakura_sign_in.item_count_s_error": "Item Quantity [%s] Input Error",
@@ -88,6 +98,7 @@
   "tips.sakura_sign_in.advancement_json_s_error": "Advancement JSON [%s] Input Error",
   "tips.sakura_sign_in.reward_probability_s_error": "Reward Probability [%s] Input Error",
   "tips.sakura_sign_in.valid_until_s_error": "Valid Until [%s] Input Error",
+  "tips.sakura_sign_in.num_s_error": "Num [%s] Input Error",
   "tips.sakura_sign_in.enter_value_s_error": "Input Value [%s] Error",
   "tips.sakura_sign_in.open_sidebar": "Expand Sidebar",
   "tips.sakura_sign_in.close_sidebar": "Collapse Sidebar",
