--- a/src/main/resources/assets/sakura_sign_in/lang/zh_cn.json
+++ b/src/main/resources/assets/sakura_sign_in/lang/zh_cn.json
@@ -44,7 +44,7 @@
   "title.sakura_sign_in.day_s": "第%s天",
   "title.sakura_sign_in.year_day_s": "年度第%s天",
   "title.sakura_sign_in.month_day_s": "月度第%s天",
-  "title.sakura_sign_in.s_valid_until_s": "%s, 有效期至: %s",
+  "title.sakura_sign_in.s_valid_until_s": "%s，有效期至：%s，剩余：%s",
   "title.sakura_sign_in.week_1": "星期一",
   "title.sakura_sign_in.week_2": "星期二",
   "title.sakura_sign_in.week_3": "星期三",
@@ -64,6 +64,15 @@
   "option.sakura_sign_in.no_remind": "不再提醒",
   "tips.sakura_sign_in.enter_something": "请输入",
   "tips.sakura_sign_in.enter_reward_rule_key": "请输入规则",
+  "tips.sakura_sign_in.enter_reward_rule_key_2": "请输入规则（连续签到天数）",
+  "tips.sakura_sign_in.enter_reward_rule_key_3": "请输入规则（循环签到天数）",
+  "tips.sakura_sign_in.enter_reward_rule_key_4": "请输入规则（每年的第n天）",
+  "tips.sakura_sign_in.enter_reward_rule_key_5": "请输入规则（每月的第n天）",
+  "tips.sakura_sign_in.enter_reward_rule_key_6": "请输入规则（每周的第n天）",
+  "tips.sakura_sign_in.enter_reward_rule_key_7": "请输入规则（具体时间）",
+  "tips.sakura_sign_in.enter_reward_rule_key_8": "请输入规则（累积签到天数）",
+  "tips.sakura_sign_in.enter_reward_rule_key_9": "请输入规则（奖励概率）",
+  "tips.sakura_sign_in.enter_reward_rule_key_10": "请输入规则（兑换码）",
   "tips.sakura_sign_in.enter_item_json": "请输入物品 JSON",
   "tips.sakura_sign_in.enter_item_count": "请输入物品数量",
   "tips.sakura_sign_in.enter_item_nbt": "请输入物品 NBT",
@@ -78,6 +87,7 @@
   "tips.sakura_sign_in.enter_command": "请输入指令",
   "tips.sakura_sign_in.enter_reward_probability": "请输入奖励概率",
   "tips.sakura_sign_in.enter_valid_until": "请输入有效期",
+  "tips.sakura_sign_in.enter_num": "请输入数量",
   "tips.sakura_sign_in.reward_rule_s_error": "规则名称 [%s] 输入有误",
   "tips.sakura_sign_in.item_json_s_error": "物品 JSON [%s] 输入有误",
   "tips.sakura_sign_in.item_count_s_error": "物品数量 [%s] 输入有误",
@@ -88,6 +98,7 @@
   "tips.sakura_sign_in.advancement_json_s_error": "进度 JSON [%s] 输入有误",
   "tips.sakura_sign_in.reward_probability_s_error": "奖励概率 [%s] 输入有误",
   "tips.sakura_sign_in.valid_until_s_error": "有效期 [%s] 输入有误",
+  "tips.sakura_sign_in.num_s_error": "数量 [%s] 输入有误",
   "tips.sakura_sign_in.enter_value_s_error": "输入值 [%s] 有误",
   "tips.sakura_sign_in.open_sidebar": "展开侧边栏",
   "tips.sakura_sign_in.close_sidebar": "关闭侧边栏",
