chore 1.重构 重构了大部分代码
fix
1.修复 删除基础奖励标题导致的异常
2.修复 兑换码奖励粘贴错位的问题

--- a/src/main/resources/assets/sakura_sign_in/lang/en_us.json
+++ b/src/main/resources/assets/sakura_sign_in/lang/en_us.json
@@ -67,7 +67,32 @@
   "option.sakura_sign_in.edit_theme_file": "Edit Theme",
   "option.sakura_sign_in.create_theme_file": "Create Theme",
   "option.sakura_sign_in.theme_folder_empty": "No Theme File Found!",
-  "option.sakura_sign_in.select_theme_bg_file": "Select Background File",
+  "option.sakura_sign_in.theme_component_prev_year_btn": "Previous Year",
+  "option.sakura_sign_in.theme_component_next_year_btn": "Next Year",
+  "option.sakura_sign_in.theme_component_year_text": "Year Text",
+  "option.sakura_sign_in.theme_component_prev_month_btn": "Previous Month",
+  "option.sakura_sign_in.theme_component_next_month_btn": "Next Month",
+  "option.sakura_sign_in.theme_component_month_text": "Month Text",
+  "option.sakura_sign_in.theme_component_date_cell_btn": "Date Cell",
+  "option.sakura_sign_in.theme_component_date_cell_text": "Date Text",
+  "option.sakura_sign_in.theme_component_tooltip_bg": "Reward Bg",
+  "option.sakura_sign_in.theme_component_tooltip_text": "Reward Text",
+  "option.sakura_sign_in.theme_component_theme_btn": "Change Theme",
+  "option.sakura_sign_in.theme_component_expand_btn": "Expand Sidebar",
+  "option.sakura_sign_in.theme_component_fold_btn": "Fold Sidebar",
+  "option.sakura_sign_in.theme_component_help_btn": "Help Info",
+  "option.sakura_sign_in.theme_component_download_btn": "Download Config",
+  "option.sakura_sign_in.theme_component_upload_btn": "Upload Config",
+  "option.sakura_sign_in.theme_component_folder_btn": "Config Folder",
+  "option.sakura_sign_in.theme_component_sort_btn": "Sort Rewards",
+  "option.sakura_sign_in.theme_component_key_btn": "Key Config",
+  "option.sakura_sign_in.theme_component_background": "Background",
+  "option.sakura_sign_in.theme_component_custom": "Decoration",
+  "option.sakura_sign_in.theme_component_switch": "Switch",
+  "option.sakura_sign_in.add_theme_component": "Add Component",
+  "option.sakura_sign_in.edit_theme_info": "Edit Theme Info",
+  "option.sakura_sign_in.enable_mc_bg": "Enable Vanilla Bg",
+  "option.sakura_sign_in.disable_mc_bg": "Disable Vanilla Bg",
   "tips.sakura_sign_in.enter_something": "Please Enter",
   "tips.sakura_sign_in.enter_reward_rule_key": "Please Enter Rule",
   "tips.sakura_sign_in.enter_reward_rule_key_2": "Please Enter Rule (One day)",
@@ -153,6 +178,12 @@
   "tips.sakura_sign_in.enter_theme_texture_id": "Please assign a unique ID to this texture",
   "tips.sakura_sign_in.theme_texture_id_empty": "Texture ID cannot be empty",
   "tips.sakura_sign_in.theme_texture_id_exists": "Texture ID [%s] already exists",
+  "tips.sakura_sign_in.enter_or_select_file": "Please enter a file path or select a file",
+  "tips.sakura_sign_in.select_file_empty": "File Path cannot be empty",
+  "tips.sakura_sign_in.select_file_error": "File Path [%s] Input Error",
+  "tips.sakura_sign_in.select_file_notfound": "File [%s] Not Found",
+  "tips.sakura_sign_in.enter_or_select_color": "Please enter a color value or select a color (ARGB or RGB)",
+  "tips.sakura_sign_in.select_color_error": "Color Value [%s] Input Error",
   "message.sakura_sign_in.selected_theme_file_s": "Selected theme file: %s",
   "message.sakura_sign_in.next_day_cannot_operate": "Please explore future dates for operations.",
   "message.sakura_sign_in.already_signed": "You have already signed in today.",
@@ -208,5 +239,14 @@
   "message.sakura_sign_in.no_permission_to_view_reward": "Insufficient permissions to view the reward config: %s.",
   "message.sakura_sign_in.server_default_language": "The default language of the server is set to %s.",
   "message.sakura_sign_in.player_default_language": "The default language of the player is set to %s.",
-  "message.sakura_sign_in.language_not_exist": "Language [%s] has not been adapted yet"
+  "message.sakura_sign_in.language_not_exist": "Language [%s] has not been adapted yet",
+  "message.sakura_sign_in.delete_base_title_1": "Meow?",
+  "message.sakura_sign_in.delete_base_title_2": "This one can't be deleted! >_<",
+  "message.sakura_sign_in.delete_base_title_3": "That must’ve been a slip of the hand, right?",
+  "message.sakura_sign_in.delete_base_title_4": "QAQ",
+  "message.sakura_sign_in.delete_base_title_5": "java.lang.NullPointerException",
+  "message.sakura_sign_in.delete_base_title_6": "java.lang.IndexOutOfBoundsException: Index -∞ out of bounds for length +∞",
+  "message.sakura_sign_in.delete_base_title_7": "Exception in thread \"minecraft\" java.lang.NoSuchMethodException: Delete -∞",
+  "message.sakura_sign_in.delete_base_title_8": "Your computer will shut down in %s seconds",
+  "message.sakura_sign_in.delete_base_title_9": "You actually believed that?"
 }
