--- a/src/main/resources/assets/sakura_sign_in/lang/zh_cn.json
+++ b/src/main/resources/assets/sakura_sign_in/lang/zh_cn.json
@@ -67,7 +67,32 @@
   "option.sakura_sign_in.edit_theme_file": "编辑主题",
   "option.sakura_sign_in.create_theme_file": "新建主题",
   "option.sakura_sign_in.theme_folder_empty": "未找到主题文件！",
-  "option.sakura_sign_in.select_theme_bg_file": "选择背景文件",
+  "option.sakura_sign_in.theme_component_prev_year_btn": "上页年份",
+  "option.sakura_sign_in.theme_component_next_year_btn": "下页年份",
+  "option.sakura_sign_in.theme_component_year_text": "年份文字",
+  "option.sakura_sign_in.theme_component_prev_month_btn": "上页月份",
+  "option.sakura_sign_in.theme_component_next_month_btn": "下页月份",
+  "option.sakura_sign_in.theme_component_month_text": "月份文字",
+  "option.sakura_sign_in.theme_component_date_cell_btn": "日期按钮",
+  "option.sakura_sign_in.theme_component_date_cell_text": "日期文字",
+  "option.sakura_sign_in.theme_component_tooltip_bg": "奖励背景",
+  "option.sakura_sign_in.theme_component_tooltip_text": "奖励文字",
+  "option.sakura_sign_in.theme_component_theme_btn": "切换主题",
+  "option.sakura_sign_in.theme_component_expand_btn": "展开侧栏",
+  "option.sakura_sign_in.theme_component_fold_btn": "折叠侧栏",
+  "option.sakura_sign_in.theme_component_help_btn": "帮助信息",
+  "option.sakura_sign_in.theme_component_download_btn": "下载配置",
+  "option.sakura_sign_in.theme_component_upload_btn": "上传配置",
+  "option.sakura_sign_in.theme_component_folder_btn": "奖励路径",
+  "option.sakura_sign_in.theme_component_sort_btn": "奖励排序",
+  "option.sakura_sign_in.theme_component_key_btn": "按键设置",
+  "option.sakura_sign_in.theme_component_background": "窗口背景",
+  "option.sakura_sign_in.theme_component_custom": "装饰组件",
+  "option.sakura_sign_in.theme_component_switch": "开关组件",
+  "option.sakura_sign_in.add_theme_component": "添加组件",
+  "option.sakura_sign_in.edit_theme_info": "编辑主题信息",
+  "option.sakura_sign_in.enable_mc_bg": "启用原版背景",
+  "option.sakura_sign_in.disable_mc_bg": "禁用原版背景",
   "tips.sakura_sign_in.enter_something": "请输入",
   "tips.sakura_sign_in.enter_reward_rule_key": "请输入规则",
   "tips.sakura_sign_in.enter_reward_rule_key_2": "请输入规则（连续签到天数）",
@@ -153,6 +178,12 @@
   "tips.sakura_sign_in.theme_texture_id_empty": "纹理ID不能为空",
   "tips.sakura_sign_in.theme_texture_id_exists": "纹理ID [%s] 已存在",
   "tips.sakura_sign_in.enter_theme_description": "请输入主题描述",
+  "tips.sakura_sign_in.enter_or_select_file": "请输入文件路径或选择文件",
+  "tips.sakura_sign_in.select_file_empty": "文件路径不能为空",
+  "tips.sakura_sign_in.select_file_error": "文件路径 [%s] 输入有误",
+  "tips.sakura_sign_in.select_file_notfound": "无法找到文件 [%s]",
+  "tips.sakura_sign_in.enter_or_select_color": "请输入颜色或选择颜色(支持ARGB或RGB)",
+  "tips.sakura_sign_in.select_color_error": "颜色值 [%s] 输入有误",
   "message.sakura_sign_in.selected_theme_file_s": "已选择主题文件：%s",
   "message.sakura_sign_in.next_day_cannot_operate": "请等到未来的日期再进行操作。",
   "message.sakura_sign_in.already_signed": "今天已经签到过了。",
@@ -208,5 +239,14 @@
   "message.sakura_sign_in.no_permission_to_view_reward": "权限不足，无法查看奖励配置：%s。",
   "message.sakura_sign_in.server_default_language": "服务器默认语言被设置为：%s。",
   "message.sakura_sign_in.player_default_language": "玩家默认语言被设置为：%s。",
-  "message.sakura_sign_in.language_not_exist": "语言[%s]还未适配哦。"
+  "message.sakura_sign_in.language_not_exist": "语言[%s]还未适配哦。",
+  "message.sakura_sign_in.delete_base_title_1": "喵？",
+  "message.sakura_sign_in.delete_base_title_2": "这是不能删哒！>_<",
+  "message.sakura_sign_in.delete_base_title_3": "一定是手滑了对吧？",
+  "message.sakura_sign_in.delete_base_title_4": "QAQ",
+  "message.sakura_sign_in.delete_base_title_5": "java.lang.NullPointerException",
+  "message.sakura_sign_in.delete_base_title_6": "java.lang.IndexOutOfBoundsException: Index -∞ out of bounds for length +∞",
+  "message.sakura_sign_in.delete_base_title_7": "Exception in thread \"minecraft\" java.lang.NoSuchMethodException: Delete -∞",
+  "message.sakura_sign_in.delete_base_title_8": "电脑将在%s秒后关机",
+  "message.sakura_sign_in.delete_base_title_9": "真信了？"
 }
