- Added missing language - Fixed eco icon - add fallback icon to barrier if non icon reword type added

--- a/src/main/resources/assets/sakura_sign_in/lang/en_us.json
+++ b/src/main/resources/assets/sakura_sign_in/lang/en_us.json
@@ -26,6 +26,7 @@
   "word.sakura_sign_in.reward_type_6": "Advancement",
   "word.sakura_sign_in.reward_type_7": "Message",
   "word.sakura_sign_in.reward_type_8": "Command",
+  "word.sakura_sign_in.reward_type_9": "Economy",
   "word.sakura_sign_in.reward_base": "Base Reward",
   "word.sakura_sign_in.reward_continuous": "Continuous Reward",
   "word.sakura_sign_in.reward_cycle": "Cycle Reward",
