--- a/src/main/resources/assets/sakura_sign_in/lang/zh_cn.json
+++ b/src/main/resources/assets/sakura_sign_in/lang/zh_cn.json
@@ -26,6 +26,7 @@
   "word.sakura_sign_in.reward_type_6": "进度",
   "word.sakura_sign_in.reward_type_7": "消息",
   "word.sakura_sign_in.reward_type_8": "指令",
+  "word.sakura_sign_in.reward_type_9": "金币",
   "word.sakura_sign_in.reward_base": "签到基础奖励",
   "word.sakura_sign_in.reward_continuous": "连续签到奖励",
   "word.sakura_sign_in.reward_cycle": "签到周期奖励",
