chore 1.重构 重构了小部分代码

--- a/src/main/resources/assets/sakura_sign_in/lang/en_us.json
+++ b/src/main/resources/assets/sakura_sign_in/lang/en_us.json
@@ -176,9 +176,8 @@
   "tips.sakura_sign_in.enter_author_name": "Please Enter Author Name",
   "tips.sakura_sign_in.enter_theme_version": "Please Enter Theme Version",
   "tips.sakura_sign_in.enter_theme_description": "Please Enter Theme Description",
-  "tips.sakura_sign_in.enter_theme_texture_id": "Please assign a unique ID to this texture",
-  "tips.sakura_sign_in.theme_texture_id_empty": "Texture ID cannot be empty",
-  "tips.sakura_sign_in.theme_texture_id_exists": "Texture ID [%s] already exists",
+  "tips.sakura_sign_in.enter_theme_texture_id": "Texture ID (Image File SHA-256)",
+  "tips.sakura_sign_in.theme_texture_id_error": "Failed to generate Texture ID",
   "tips.sakura_sign_in.enter_or_select_file": "Please enter a file path or select a file",
   "tips.sakura_sign_in.select_file_empty": "File Path cannot be empty",
   "tips.sakura_sign_in.select_file_error": "File Path [%s] Input Error",
@@ -242,6 +241,8 @@
   "message.sakura_sign_in.server_default_language": "The default language of the server is set to %s.",
   "message.sakura_sign_in.player_default_language": "The default language of the player is set to %s.",
   "message.sakura_sign_in.language_not_exist": "Language [%s] has not been adapted yet",
+  "message.sakura_sign_in.save_success": "Save successful.",
+  "message.sakura_sign_in.save_failed": "Save failed.",
   "message.sakura_sign_in.delete_base_title_1": "Meow?",
   "message.sakura_sign_in.delete_base_title_2": "This one can't be deleted! >_<",
   "message.sakura_sign_in.delete_base_title_3": "That must’ve been a slip of the hand, right?",
