--- a/src/main/resources/assets/sakura_sign_in/lang/zh_cn.json
+++ b/src/main/resources/assets/sakura_sign_in/lang/zh_cn.json
@@ -175,9 +175,8 @@
   "tips.sakura_sign_in.enter_theme_name": "请输入主题名称",
   "tips.sakura_sign_in.enter_author_name": "请输入作者名称",
   "tips.sakura_sign_in.enter_theme_version": "请输入主题版本",
-  "tips.sakura_sign_in.enter_theme_texture_id": "请给该纹理设置一个ID（不能重复）",
-  "tips.sakura_sign_in.theme_texture_id_empty": "纹理ID不能为空",
-  "tips.sakura_sign_in.theme_texture_id_exists": "纹理ID [%s] 已存在",
+  "tips.sakura_sign_in.enter_theme_texture_id": "纹理ID (图片文件SHA-256)",
+  "tips.sakura_sign_in.theme_texture_id_error": "纹理ID生成失败",
   "tips.sakura_sign_in.enter_theme_description": "请输入主题描述",
   "tips.sakura_sign_in.enter_or_select_file": "请输入文件路径或选择文件",
   "tips.sakura_sign_in.select_file_empty": "文件路径不能为空",
@@ -242,6 +241,8 @@
   "message.sakura_sign_in.server_default_language": "服务器默认语言被设置为：%s。",
   "message.sakura_sign_in.player_default_language": "玩家默认语言被设置为：%s。",
   "message.sakura_sign_in.language_not_exist": "语言[%s]还未适配哦。",
+  "message.sakura_sign_in.save_success": "保存成功。",
+  "message.sakura_sign_in.save_failed": "保存失败。",
   "message.sakura_sign_in.delete_base_title_1": "喵？",
   "message.sakura_sign_in.delete_base_title_2": "这是不能删哒！>_<",
   "message.sakura_sign_in.delete_base_title_3": "一定是手滑了对吧？",
